# ft_printf

./: CMakeLists.txt  Makefile  README.md  Untitled.code-workspace  a.out
MainHeader/: ft_printf.h
Srcs/Char/: char.c
Srcs/DI/: check_limits_integer.c  ft_di.c  ft_itoa_int_binary.c  ft_itoa_integer.c  ft_put_indents_integer.c  ft_put_precision_integer.c  ft_put_sign_integer.c  ft_put_space_integer.c
Srcs/Float/: copy_float.c  floats.c  floats_manipulation.c  get_ipart.c  indents_flo.c  ipart_to_str.c  long_arithmetic_divison.c  long_arithmetic_operations_for_double.c  long_d.c  long_double.c  long_double_manipulation.c  num_to_arr.c  ohter_case.c  other_case_double.c  set_plus_flo.c  set_precision_flo.c  set_space_flo.c
Srcs/HighestFunctions/: assembler.c  char_bin_search.c  dynamic_buffer.c  ft_printf.c  ft_put_str.c  ft_set_to_null.c  ft_strrev.c  num_len.c
Srcs/HighestFunctions/Parsing/: ft_parsing.c  ft_str_after.c  put_data.c  set_flags.c  set_indents.c  set_modificators.c  set_precision.c  string_before.c
Srcs/OxX/: fill_precision.c  ft_caps.c  grid_o.c  grid_x.c  indents_ox.c  itoa_base.c  itoa_u.c  ox.c
Srcs/Pointer/: ft_itoa_pointer.c  ft_put_grid_pointer.c  ft_put_indents_pointer.c  ft_put_precision_pointer.c  pointer.c
Srcs/String/: string.c
Srcs/Unsigned/: check_limits_unsigned_integer.c  ft_itoa_u_bin.c  ft_itoa_unsigned.c  ft_put_indents_unsigned.c  ft_put_precision_unsigned.c  ft_unsigned.c  num_len_unsigned.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
libft/: ft_strlen.c  libft.h.gch
